samples/bad/bad013.lat
// Adding int to string
int main() {
      string x ;
      x = "pi" + 1 ;
      return 0 ;
}
